2002-10-04  Richard Williamson   <rjw@apple.com>

        Danger Will Robinson.  We have to poseAsClass: as early as possible
        so that any NSViews will be created with the appropriate poser.
        This problem manifested itself with SimpleViewer failing
        immediately.  NSViews were created by loading a nib before
        WebHTMLView class initialization occured.  After posing the
        already instantiated instances of NSView had a %NSView class,
        causing many things to break.
        
        * WebView.subproj/WebHTMLViewPrivate.m:
        (+[WebHTMLView load]):

2002-10-04  Richard Williamson   <rjw@apple.com>

        Ensure that we return non-nil request  from handle:willSendRequest:
        even when WK's laod delegate is nil.
        
        * WebCoreSupport.subproj/WebSubresourceClient.m:
        (-[WebSubresourceClient handle:willSendRequest:]):
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient handle:willSendRequest:]):

2002-10-04  Darin Adler  <darin@apple.com>

        * Panels.subproj/WebAuthenticationPanel.m:
        (-[WebAuthenticationPanel loadNib]): Use ERROR instead of NSLog here.
        (-[WebAuthenticationPanel setUpForRequest:]): Mark some strings for localization.

        * WebKit.pbproj/project.pbxproj: Change the encoding on a lot more files to UTF-8.

        * English.lproj/StringsNotToBeLocalized.txt: Added some new exceptions.
        * English.lproj/Localizable.strings: Re-generated.

2002-10-04  Richard Williamson   <rjw@apple.com>

        Changed WebDOMNode name to WebDebugDOMNode to make room for
        real node.
        
        * WebKit.exp:
        * WebKit.pbproj/project.pbxproj:
        * WebView.subproj/WebDOMNode.h: Removed.
        * WebView.subproj/WebDOMNode.m: Removed.

2002-10-04  Richard Williamson   <rjw@apple.com>

        * WebKit.pbproj/project.pbxproj:

2002-10-03  Richard Williamson   <rjw@apple.com>
